# backflip-bdr

./: .env.example  .gitignore  README.md  __init__.py  agent.py  alembic.ini  code-review.md  docker-compose.yml  exa-docs.md.txt  model_config.py  pyproject.toml  vertex_ai_init.py
RecycleBin/: main.py  requirements.txt
config/: ctx.example.toml
db/: __init__.py  connection.py  init.sql  models.py
db/migrations/: env.py
db/migrations/versions/: 001_initial_schema.py  002_event_unique_constraint.py  003_reply_classification_constraint.py
db/repositories/: __init__.py  contacts.py  events.py  improvement.py  observability.py  organizations.py  pipeline.py  sequences.py
docs/: ANALYSIS-Feb18.md  Promt-mellow-puzzling-meteor.md  errors_from_update_alembic.txt
docs/error-explainer/: alembic-role-not-exist.md
prompts/: call_permission_email.md  email_copywriter.md  icp_profiler.md  objection_handling.md
schemas/: __init__.py  campaign.py  lead.py  meeting.py
scripts/: sync_to_context_harness.py
teams/: __init__.py  lead_discovery.py  meeting_booking.py  outreach_strategy.py  response_handling.py
tests/: test_context_harness_tools.py  test_exa_tools.py  test_hunter_tools.py  test_repositories.py
tools/: __init__.py  calendar_tools.py  context_harness_tools.py  elevenlabs_tools.py  exa_tools.py  hunter_tools.py
